--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/netlify": "^5.5.3",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.9",
+    "firebase": "^10.13.2",
+    "sweetalert2": "^11.14.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
